--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "multer": "^1.3.0",
     "mysql2": "^1.5.2",
     "sequelize": "^4.33.4",
-    "sequelize-cli": "^4.0.0",
+    "sequelize-cli": "^4.0.0"
   }
 }
